--- a/src/main/web/src/routes/_authenticated/_member/positions/-components/positions-table/positions-table.module.css
+++ b/src/main/web/src/routes/_authenticated/_member/positions/-components/positions-table/positions-table.module.css
@@ -35,6 +35,10 @@
   border-bottom: 1px solid var(--mantine-color-dark-5);
 }
 
+.tableRow[data-expanded="false"]:last-child td {
+  border-bottom: none;
+}
+
 .tableRow[data-expanded="true"] {
   background: var(--mantine-color-dark-5);
   border-bottom: none;
@@ -42,10 +46,6 @@
 
 .tableRow:hover {
   background: var(--mantine-color-dark-4);
-}
-
-.tableRow:last-child {
-  border-bottom: none;
 }
 
 .tableRow > td {
